# vuln-research

./: .gitignore  CLAUDE.md  PLAN_V2.md  README.md  config.yaml.example  pyproject.toml
analyzers/: semgrep_runner.py  slither_runner.py
analyzers/detectors/: access_control.py  flash_loan.py  integer_overflow.py  oracle_manipulation.py  reentrancy.py  storage_collision.py  taint_analysis.py  unchecked_calls.py
foundry/templates/: access_control_poc.sol.j2  base_test.sol.j2  flash_loan_poc.sol.j2  integer_overflow_poc.sol.j2  oracle_manipulation_poc.sol.j2  reentrancy_poc.sol.j2
pipeline/: acquire.py  analyze.py  context.py  hypothesize.py  llm.py  models.py  orchestrator.py  poc_gen.py  report.py  scan.py  scoring.py  triage.py  verify.py
reports/templates/: immunefi_report.md.j2
rules/semgrep/: access-control.yaml  flash-loan.yaml  integer-overflow.yaml  oracle-manipulation.yaml  reentrancy.yaml  storage-collision.yaml  taint-analysis.yaml  unchecked-calls.yaml
setup/: install.sh  install_analyzers.sh  install_foundry.sh  install_solc.sh  verify.sh
tests/: test_acquire.py  test_analyze.py  test_context.py  test_hypothesize.py  test_integration.py  test_llm.py  test_models.py  test_poc_gen.py  test_report.py  test_scoring.py  test_semgrep_runner.py  test_slither_runner.py  test_triage.py  test_verify.py
tests/fixtures/: semgrep_output.json  slither_output.json
tests/fixtures/sample_contracts/: InheritanceChain.sol  MultiContract.sol  Safe.sol  SimpleVault.sol  Vulnerable.sol
